Fixed desktop layout issue at bottom.

--- a/css/index.css
+++ b/css/index.css
@@ -262,25 +262,16 @@ footer {
   border-top: 1px solid #dee2e6;
   padding: 50px 60px;
   display: flex;
-  justify-content: center;
-  flex-direction: column-reverse;
+}
+@media (max-width: 500px) {
+  .home .walk {
+    display: flex;
+    justify-content: center;
+    flex-direction: column-reverse;
+  }
 }
 .home .walk-text {
-  width: 50%;
-  /* button {
-          height: 4rem;
-          width: 30%;
-          border-radius: 10px;
-          color: @nav-border;
-          background-color: @btn-bg-color;
-          border: none;
-          font-family: 'Ubuntu', sans-serif;
-          font-size: 2rem;
-          &:hover {
-            color: @btn-bg-color;
-            background-color: @nav-border; 
-          }
-          } */
+  width: 48%;
 }
 .home .walk-text h3 {
   margin-bottom: 10px;
@@ -288,7 +279,7 @@ footer {
 .home .walk-text p {
   margin-bottom: 26px;
 }
-.home .walk-text .btn {
+.home .btn {
   height: 4rem;
   width: 30%;
   border-radius: 10px;
@@ -298,25 +289,25 @@ footer {
   font-family: 'Ubuntu', sans-serif;
   font-size: 2rem;
 }
-.home .walk-text .btn p {
+.home .btn p {
   text-align: center;
   padding-top: 8px;
 }
-.home .walk-text .btn:hover {
+.home .btn:hover {
   color: #22283A;
   background-color: #F1F1F1;
 }
-.home .walk-text .walk-img {
+.home .walk-img {
   width: 46%;
   margin-left: 4%;
 }
-.home .walk-text img {
+.home img {
   width: 100%;
   height: auto;
   border-radius: 10px;
 }
 @media (max-width: 500px) {
-  .home .walk-text .float {
+  .home .float {
     width: 100%;
     margin: 0 auto;
   }
