--- a/less/home-page.less
+++ b/less/home-page.less
@@ -19,25 +19,25 @@
       flex-wrap: wrap;
       width: 100%;
 
-      img {
-        width: 28%;
-        margin: 20px 2.5%;
-        border-radius: 20px;
-        height: 100%;
-      }
+        img {
+          width: 28%;
+          margin: 20px 2.5%;
+          border-radius: 20px;
+          height: 100%;
+        }
 
-      .sky, .launch {
-        @media @phone {
-          display: none;
+        .sky, .launch {
+          @media @phone {
+            display: none;
+          }
+        }
+
+        .rocket {
+          @media @phone {
+            width: 100%;
+          }
         }
       }
-
-      .rocket {
-        @media @phone {
-          width: 100%;
-        }
-      }
-    }
 
     .visit-planets {
       padding: 15px;
@@ -56,49 +56,32 @@
       border-top: 1px solid @main-border-color;
       padding: 50px 60px;
       display: flex;
+      @media @phone {
+      display: flex;
       justify-content: center;
       flex-direction: column-reverse;
-      
+      }
     }
 
       .walk-text {
-        width: 50%;
-
+        width: 48%;
         h3 {
           margin-bottom: 10px;
         }
-
         p {
           margin-bottom: 26px;
         }
-
-        
-
-        .btn {
-          .button (@nav-border; @btn-bg-color);
-          p {
-            text-align: center;
-            padding-top: 8px;
-          }
-          &:hover {
-            .hoverinverse;
-        }
       }
-
-      /* button {
-          height: 4rem;
-          width: 30%;
-          border-radius: 10px;
-          color: @nav-border;
-          background-color: @btn-bg-color;
-          border: none;
-          font-family: 'Ubuntu', sans-serif;
-          font-size: 2rem;
-          &:hover {
-            color: @btn-bg-color;
-            background-color: @nav-border; 
+        .btn {
+          .button(@nav-border, @btn-bg-color);
+            p {
+              text-align: center;
+              padding-top: 8px;
+              }
+            &:hover {
+            .hoverinverse;
+            }
           }
-          } */
 
       .walk-img {
         width: 46%;
@@ -117,6 +100,5 @@
           }
         }
       }
-    }
 
 // home
